[tool.poetry]
name = "naas-data-product"
version = "0.1.0"
description = ""
authors = ["Maxime Jublou <maxime@jublou.fr>"]
readme = "README.md"
packages = [{include = "naas_data_product"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
